--- a/test/themes/standard.css
+++ b/test/themes/standard.css
@@ -1,4 +1,4 @@
 :root .standard {
-    --pieprogress-background-color: yellowgreen;
-    --pieprogress-color: #655;
+    --pieprogress-background-color: lightgray;
+    --pieprogress-color: blue;
 }
